--- a/build.gradle
+++ b/build.gradle
@@ -1,5 +1,19 @@
+buildscript {
+    repositories {
+        maven {
+            name = 'forge'
+            url = 'https://files.minecraftforge.net/maven'
+        }
+    }
+
+    dependencies {
+        classpath 'net.minecraftforge.gradle:ForgeGradle:2.3-SNAPSHOT'
+    }
+}
+
 plugins {
     id 'org.spongepowered.plugin' version '0.8.1'
+    id 'net.minecrell.vanillagradle.server' version '2.2-6'
 }
 
 group = pluginGroup
@@ -13,4 +27,9 @@ sponge.plugin.id = pluginId
 
 tasks.withType(JavaCompile) {
     options.encoding = 'UTF-8'
+}
+
+minecraft {
+    version = '1.12.2'
+    mappings = 'snapshot_20180601'
 }
